# routes/api.php
@@ -4,6 +4,7 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
 use App\Http\Controllers\Api\UserController;
+use App\Http\Controllers\Api\ProfileController;
 
 /*
 |--------------------------------------------------------------------------
@@ -20,9 +21,13 @@ use App\Http\Controllers\Api\UserController;
 //     return $request->user();
 // });
 
-Route::group(['middleware'=>['auth.guest']], function(){
+
     Route::post('/register', [UserController::class, 'register']);
     Route::post('/login', [UserController::class, 'login']);
     Route::post('/logout', [UserController::class, 'logout']);
     Route::post('/update', [UserController::class, 'update']);
+
+Route::group(['middleware'=>['auth:sanctum']], function(){
+    Route::resource('profiles', ProfileController::class);
 });
+
